--- a/index.html
+++ b/index.html
@@ -3,193 +3,131 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>True Care Solutions LLC | Expert Tech Repair Services</title>
+  <title>Tech Repair Partner for AT&T Stores</title>
   <style>
-    /* Google Fonts - Montserrat & Open Sans */
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap');
-
-    /* Reset & base styles */
+    /* Reset and basic styling */
     * {
-      margin: 0; padding: 0; box-sizing: border-box;
+      box-sizing: border-box;
     }
     body {
-      font-family: 'Open Sans', sans-serif;
-      color: #222;
-      background: #f4f7fa;
+      font-family: Arial, sans-serif;
+      margin: 0; padding: 0;
       line-height: 1.6;
+      background: #f9f9f9;
+      color: #333;
     }
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    /* Container */
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    /* Header */
     header {
       background: #004080;
       color: white;
-      padding: 2.5rem 0;
+      padding: 1.5rem 1rem;
       text-align: center;
     }
     header h1 {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 3rem;
-      letter-spacing: 2px;
-      margin-bottom: 0.5rem;
+      margin: 0;
+      font-size: 2rem;
     }
     header p {
-      font-size: 1.25rem;
-      font-weight: 600;
-      opacity: 0.85;
+      margin: 0.5rem 0 0;
+      font-size: 1.1rem;
     }
-
-    /* Navigation */
     nav {
-      background: #022c59;
+      background: #003366;
       display: flex;
       justify-content: center;
+      gap: 2rem;
       padding: 1rem 0;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 100;
     }
     nav a {
-      color: #cfd9e6;
-      font-weight: 600;
-      margin: 0 1.25rem;
-      padding: 0.5rem 0;
-      transition: color 0.3s ease;
-      font-size: 1.1rem;
-      border-bottom: 3px solid transparent;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
     }
-    nav a:hover,
-    nav a.active {
-      color: #fff;
-      border-bottom: 3px solid #00aaff;
+    nav a:hover {
+      text-decoration: underline;
     }
-
-    /* Hero Section */
-    .hero {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      margin: 4rem 0 6rem 0;
-      gap: 2rem;
+    .container {
+      max-width: 1000px;
+      margin: 2rem auto;
+      padding: 0 1rem;
     }
-    .hero-text {
-      flex: 1 1 450px;
+    section {
+      margin-bottom: 4rem;
     }
-    .hero-text h2 {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 2.5rem;
+    section h2 {
+      border-bottom: 3px solid #004080;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
       color: #004080;
+    }
+    .hero-image {
+      width: 100%;
+      max-height: 350px;
+      object-fit: cover;
+      border-radius: 8px;
       margin-bottom: 1rem;
     }
-    .hero-text p {
-      font-size: 1.1rem;
-      margin-bottom: 2rem;
-      color: #444;
-    }
-    .btn-primary {
-      background: #00aaff;
-      color: white;
-      padding: 0.85rem 2rem;
-      font-weight: 700;
-      border-radius: 6px;
-      cursor: pointer;
-      box-shadow: 0 6px 12px rgba(0,170,255,0.4);
-      transition: background 0.3s ease, box-shadow 0.3s ease;
-    }
-    .btn-primary:hover {
-      background: #007bbf;
-      box-shadow: 0 8px 20px rgba(0,123,191,0.6);
-    }
-    .hero-img {
-      flex: 1 1 400px;
-      max-width: 450px;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    }
-    .hero-img img {
-      width: 100%;
-      display: block;
-      border-radius: 12px;
-      transition: transform 0.3s ease;
-    }
-    .hero-img img:hover {
-      transform: scale(1.05);
-    }
-
-    /* Services Section */
-    .services {
-      background: white;
-      border-radius: 12px;
-      padding: 3rem 2rem;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.05);
-      margin-bottom: 5rem;
-    }
-    .services h3 {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 2rem;
-      color: #004080;
-      margin-bottom: 2rem;
-      text-align: center;
-    }
     .services-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-      gap: 1.5rem;
       list-style: none;
-      color: #555;
-      font-size: 1.1rem;
+      padding: 0;
     }
     .services-list li {
-      background: #e7f3ff;
-      padding: 1rem 1.5rem;
+      background: #e6f0ff;
+      margin: 0.5rem 0;
+      padding: 0.75rem 1rem;
+      border-radius: 5px;
+    }
+    .contact-info p {
+      margin: 0.3rem 0;
+    }
+    form {
+      max-width: 400px;
+      background: #fff;
+      padding: 1rem;
       border-radius: 8px;
-      font-weight: 600;
-      box-shadow: 0 2px 6px rgba(0,170,255,0.15);
-      text-align: center;
-      transition: background 0.3s ease;
-      cursor: default;
+      box-shadow: 0 0 10px rgb(0 0 0 / 0.1);
     }
-    .services-list li:hover {
-      background: #00aaff;
+    form label {
+      display: block;
+      margin-top: 1rem;
+      font-weight: bold;
+    }
+    form input, form textarea {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 0.3rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    form textarea {
+      resize: vertical;
+      min-height: 100px;
+    }
+    form button {
+      margin-top: 1rem;
+      background: #004080;
       color: white;
-      box-shadow: 0 8px 15px rgba(0,170,255,0.4);
+      border: none;
+      padding: 0.75rem 1.2rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
     }
-
-    /* Footer */
+    form button:hover {
+      background: #00264d;
+    }
     footer {
-      background: #022c59;
-      color: #cfd9e6;
+      background: #003366;
+      color: white;
       text-align: center;
-      padding: 1.5rem 1rem;
+      padding: 1rem;
       font-size: 0.9rem;
-      letter-spacing: 0.05em;
-      user-select: none;
     }
-
-    /* Responsive */
-    @media (max-width: 900px) {
-      .hero {
-        flex-direction: column-reverse;
-        text-align: center;
-      }
-      .hero-text {
-        flex: none;
-      }
-      .hero-img {
-        margin-bottom: 2rem;
-        max-width: 100%;
+    @media (max-width: 600px) {
+      nav {
+        flex-direction: column;
+        gap: 1rem;
       }
     }
   </style>
@@ -197,48 +135,66 @@
 <body>
 
 <header>
-  <h1>True Care Solutions LLC</h1>
-  <p>Connecting You with Skilled Technicians for Trusted Tech Repairs</p>
+  <h1>Reliable Tech Repair Solutions</h1>
+  <p>Your trusted partner for AT&T store repairs with NET-30 ACH payment terms</p>
 </header>
 
 <nav>
-  <a href="index.html" class="active">Home</a>
-  <a href="about.html">About</a>
-  <a href="services.html">Services</a>
-  <a href="contact.html">Contact</a>
+  <a href="#about">About Us</a>
+  <a href="#services">Services</a>
+  <a href="#contact">Contact Us</a>
 </nav>
 
 <div class="container">
 
-  <section class="hero">
-    <div class="hero-text">
-      <h2>Your Reliable Partner for Expert Technical Repairs</h2>
-      <p>
-        We connect businesses with certified technicians who deliver high-quality, timely repairs. From smartphones to tablets, we ensure your devices are fixed right the first time.
-      </p>
-      <a href="contact.html" class="btn-primary">Get in Touch</a>
-    </div>
-    <div class="hero-img">
-      <img src="https://images.unsplash.com/photo-1581093588401-c6e9f7f51711?auto=format&fit=crop&w=600&q=80" alt="Technician repairing smartphone" />
-    </div>
+  <section id="about">
+    <h2>About Us</h2>
+    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1000&q=80" alt="Technicians working" class="hero-image" />
+    <p>We are a USA-registered LLC specializing in technical repair services tailored to meet the specific needs of AT&T stores. With years of experience and a dedicated team of certified technicians, we ensure top-quality repairs that keep your customers connected. Our partnership with AT&T allows us to deliver timely, reliable services with convenient NET-30 ACH payment terms.</p>
   </section>
 
-  <section class="services">
-    <h3>Our Core Services</h3>
+  <section id="services">
+    <h2>Our Services</h2>
     <ul class="services-list">
-      <li>Screen Replacement & Repair</li>
-      <li>Battery Replacement & Upgrade</li>
-      <li>Diagnostic & Testing Services</li>
-      <li>Software Troubleshooting & Updates</li>
-      <li>Accessory Installation & Configuration</li>
-      <li>Preventative Maintenance</li>
+      <li>Smartphone and Tablet Repairs</li>
+      <li>Screen Replacement</li>
+      <li>Battery Replacement</li>
+      <li>Diagnostic Testing</li>
+      <li>Software Troubleshooting</li>
+      <li>Accessories Installation and Setup</li>
     </ul>
+    <img src="https://images.unsplash.com/photo-1512499617640-c2f9999b9f27?auto=format&fit=crop&w=1000&q=80" alt="Phone repair tools" class="hero-image" />
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <div class="contact-info">
+      <p><strong>Phone:</strong> (555) 123-4567</p>
+      <p><strong>Email:</strong> info@yourcompany.com</p>
+      <p><strong>Address:</strong> 123 Tech Lane, Suite 100, Your City, USA</p>
+    </div>
+
+    <form action="mailto:info@yourcompany.com" method="POST" enctype="text/plain">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" required />
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required />
+
+      <label for="phone">Phone</label>
+      <input type="tel" id="phone" name="phone" />
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
   </section>
 
 </div>
 
 <footer>
-  &copy; 2025 True Care Solutions LLC. All rights reserved.
+  &copy; 2025 Your Company Name. All rights reserved.
 </footer>
 
 </body>
