--- a/index.html
+++ b/index.html
@@ -1,201 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tech Repair Partner for AT&T Stores</title>
-  <style>
-    /* Reset and basic styling */
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      line-height: 1.6;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background: #004080;
-      color: white;
-      padding: 1.5rem 1rem;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-    header p {
-      margin: 0.5rem 0 0;
-      font-size: 1.1rem;
-    }
-    nav {
-      background: #003366;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      padding: 1rem 0;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .container {
-      max-width: 1000px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    section {
-      margin-bottom: 4rem;
-    }
-    section h2 {
-      border-bottom: 3px solid #004080;
-      padding-bottom: 0.5rem;
-      margin-bottom: 1rem;
-      color: #004080;
-    }
-    .hero-image {
-      width: 100%;
-      max-height: 350px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
-    .services-list {
-      list-style: none;
-      padding: 0;
-    }
-    .services-list li {
-      background: #e6f0ff;
-      margin: 0.5rem 0;
-      padding: 0.75rem 1rem;
-      border-radius: 5px;
-    }
-    .contact-info p {
-      margin: 0.3rem 0;
-    }
-    form {
-      max-width: 400px;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgb(0 0 0 / 0.1);
-    }
-    form label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-    form input, form textarea {
-      width: 100%;
-      padding: 0.5rem;
-      margin-top: 0.3rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 1rem;
-    }
-    form textarea {
-      resize: vertical;
-      min-height: 100px;
-    }
-    form button {
-      margin-top: 1rem;
-      background: #004080;
-      color: white;
-      border: none;
-      padding: 0.75rem 1.2rem;
-      font-size: 1rem;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    form button:hover {
-      background: #00264d;
-    }
-    footer {
-      background: #003366;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-    }
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-        gap: 1rem;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>True Care Solutions LLC</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<header>
-  <h1>Reliable Tech Repair Solutions</h1>
-  <p>Your trusted partner for AT&T store repairs with NET-30 ACH payment terms</p>
-</header>
-
-<nav>
-  <a href="#about">About Us</a>
-  <a href="#services">Services</a>
-  <a href="#contact">Contact Us</a>
-</nav>
-
-<div class="container">
-
-  <section id="about">
-    <h2>About Us</h2>
-    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1000&q=80" alt="Technicians working" class="hero-image" />
-    <p>We are a USA-registered LLC specializing in technical repair services tailored to meet the specific needs of AT&T stores. With years of experience and a dedicated team of certified technicians, we ensure top-quality repairs that keep your customers connected. Our partnership with AT&T allows us to deliver timely, reliable services with convenient NET-30 ACH payment terms.</p>
-  </section>
-
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul class="services-list">
-      <li>Smartphone and Tablet Repairs</li>
-      <li>Screen Replacement</li>
-      <li>Battery Replacement</li>
-      <li>Diagnostic Testing</li>
-      <li>Software Troubleshooting</li>
-      <li>Accessories Installation and Setup</li>
-    </ul>
-    <img src="https://images.unsplash.com/photo-1512499617640-c2f9999b9f27?auto=format&fit=crop&w=1000&q=80" alt="Phone repair tools" class="hero-image" />
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <div class="contact-info">
-      <p><strong>Phone:</strong> (555) 123-4567</p>
-      <p><strong>Email:</strong> info@yourcompany.com</p>
-      <p><strong>Address:</strong> 123 Tech Lane, Suite 100, Your City, USA</p>
-    </div>
-
-    <form action="mailto:info@yourcompany.com" method="POST" enctype="text/plain">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required />
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required />
-
-      <label for="phone">Phone</label>
-      <input type="tel" id="phone" name="phone" />
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" required></textarea>
-
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-
-</div>
-
-<footer>
-  &copy; 2025 Your Company Name. All rights reserved.
-</footer>
-
+    <nav>
+        <div class="logo">True Care Solutions LLC</div>
+    </nav>
+    <header class="hero">
+        <h1>True Care Solution USA</h1>
+        <p>Connecting skilled technicians with the right projects across the United States.</p>
+    </header>
+    <section class="contact-info">
+        <h2>Contact Information</h2>
+        <ul>
+            <li><strong>Address:</strong> 30 N Gould St Ste N, Sheridan, WY 82801</li>
+            <li><strong>Phone:</strong> XXX XXX XXXX</li>
+        </ul>
+    </section>
+    <section class="about">
+        <h2>About Us</h2>
+        <p>
+            True Care Solution USA is a registered company dedicated to connecting skilled technicians with the right projects across the United States. We specialize in sourcing experienced professionals who are experts in their trades and committed to delivering high-quality results—on time and with care.
+        </p>
+    </section>
+    <section class="services">
+        <h2>Our Services</h2>
+        <ul>
+            <li>Interior and exterior lighting repair and replacement</li>
+            <li>General handyman services</li>
+            <li>Plumbing and electrical work</li>
+            <li>Glass replacement</li>
+            <li>Wall repair and painting</li>
+            <li>Door repair and more</li>
+        </ul>
+        <p>
+            We proudly serve both residential and commercial clients. Whether it's a small repair or a large-scale project, our trusted technicians bring the skills and professionalism needed to get the job done right—the first time.
+        </p>
+    </section>
+    <section class="why-choose">
+        <h2>Why Choose Us?</h2>
+        <ul>
+            <li>Nationwide technician sourcing</li>
+            <li>Reliable, skilled professionals</li>
+            <li>Timely project completion</li>
+            <li>Quality workmanship you can trust</li>
+        </ul>
+        <p>
+            Let True Care Solution USA handle your next repair, renovation, or maintenance task with the care and precision it deserves.
+        </p>
+    </section>
+    <footer>
+        <p>&copy; 2025 True Care Solutions LLC. All rights reserved.</p>
+    </footer>
 </body>
 </html>
