--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo">True Care Solutions LLC</div>
     </nav>
     <header class="hero">
-        <h1>True Care Solution USA</h1>
+        <h1>True Care Solution LLC USA</h1>
         <p>Connecting skilled technicians with the right projects across the United States.</p>
     </header>
     <section class="contact-info">
@@ -19,6 +19,8 @@
         <ul>
             <li><strong>Address:</strong> 30 N Gould St Ste N, Sheridan, WY 82801</li>
             <li><strong>Phone:</strong> XXX XXX XXXX</li>
+            <li><strong>Email:</strong>Service@Truecaresolutions.in</li>
+            <li><strong>EIN:</strong>XXX XXX XXX</li>
         </ul>
     </section>
     <section class="about">
