--- a/index[1].html
+++ b/index[1].html
@@ -18,9 +18,9 @@
     </nav>
 
     <header class="hero">
-        <h1>About Us – True Care Solution USA</h1>
+        <h1>About Us – True Care Solution LLC USA</h1>
         <p>
-            True Care Solution USA is a registered company dedicated to connecting skilled technicians with the right projects across the United States. We specialize in sourcing experienced professionals who are experts in their trades and committed to delivering high-quality results—on time and with care.
+            True Care Solution LLC USA is a registered company dedicated to connecting skilled technicians with the right projects across the United States. We specialize in sourcing experienced professionals who are experts in their trades and committed to delivering high-quality results—on time and with care.
         </p>
     </header>
 
