--- a/index[1].html
+++ b/index[1].html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo">True Care Solution USA</div>
+        <div class="logo">True Care Solution LLC USA</div>
         <ul>
             <li><a href="#about" class="active">About</a></li>
             <li><a href="#services">Services</a></li>
