--- a/index_Version6.html
+++ b/index_Version6.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo">True Care Solution USA</div>
+        <div class="logo">True Care Solution LLC USA</div>
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
@@ -19,7 +19,7 @@
 
     <header class="hero">
         <div class="hero-content">
-            <h1>True Care Solution USA</h1>
+            <h1>True Care Solution LLC USA</h1>
             <p>
                 Connecting skilled technicians with the right projects—nationwide.
             </p>
