--- a/index_Version6.html
+++ b/index_Version6.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>True Care Solution USA</title>
+    <title>True care solutions LLC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <div class="logo">True Care Solution LLC USA</div>
+        <div class="logo">True Care Solution LLC</div>
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
@@ -19,7 +19,7 @@
 
     <header class="hero">
         <div class="hero-content">
-            <h1>True Care Solution LLC USA</h1>
+            <h1>True Care Solution LLC </h1>
             <p>
                 Connecting skilled technicians with the right projects—nationwide.
             </p>
@@ -30,7 +30,7 @@
     <section id="about" class="about">
         <h2>About Us</h2>
         <p>
-            True Care Solution USA is a registered company dedicated to connecting skilled technicians with the right projects across the United States. We specialize in sourcing experienced professionals who are experts in their trades and committed to delivering high-quality results—on time and with care.
+            True care solutions LLC ia a USA registered company dedicated to connecting skilled technicians with the right projects across the United States. We specialize in sourcing experienced professionals who are experts in their trades and committed to delivering high-quality results—on time and with care.
         </p>
     </section>
 
@@ -94,21 +94,19 @@
             </div>
         </div>
         <p>
-            Let True Care Solution USA handle your next repair, renovation, or maintenance task with the care and precision it deserves.
-        </p>
     </section>
 
     <section id="contact" class="contact-info">
         <h2>Contact Information</h2>
         <ul>
-            <li><strong>Company:</strong> True Care Solution USA LLC</li>
+            <li><strong>Company:</strong> True care solutions LLC </li>
             <li><strong>Address:</strong> 30 N Gould St Ste N, Sheridan, WY 82801</li>
             <li><strong>Phone:</strong> XXX XXX XXXX</li>
         </ul>
     </section>
 
     <footer>
-        <p>&copy; 2025 True Care Solution USA LLC. All rights reserved.</p>
+        <p>&copy; 2025 True care solutions LLC . All rights reserved.</p>
     </footer>
 </body>
 </html>
