--- a/index_Version2.html
+++ b/index_Version2.html
@@ -19,7 +19,7 @@
     <div class="container">
       <h2>About Us</h2>
       <p>
-        True Care Solution USA is a registered company dedicated to connecting skilled technicians with the right projects across the United States.
+        True Care Solution LLC is a registered company dedicated to connecting skilled technicians with the right projects across the United States.
         We specialize in sourcing experienced professionals who are experts in their trades and committed to delivering high-quality results—on time and with care.
       </p>
       <p>
