--- a/index[1].html
+++ b/index[1].html
@@ -1,47 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>9to5 Home Services</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>True Care Solutions LLC</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <div class="logo">9to5 Home Services</div>
-        <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <header class="hero">
-        <h1>Reliable Home Services, 9am to 5pm</h1>
-        <p>Your trusted partner for maintenance, cleaning, and more.</p>
-        <a href="contact.html" class="btn">Request Service</a>
-    </header>
-    <section class="intro">
-        <h2>Welcome to 9to5 Home Services!</h2>
-        <p>
-            We provide dependable home services to keep your property in top shape. From cleaning to repairs, our professional team is ready to help. Discover our services or get in touch today!
-        </p>
-    </section>
-    <section class="features">
-        <div class="feature">
-            <h3>Experienced Professionals</h3>
-            <p>Our staff are trained and vetted for quality service.</p>
+  <header>
+    <div class="container">
+      <h1>True Care Solutions LLC</h1>
+      <p class="subtitle">Connecting skilled technicians with the right projects across the United States</p>
+      <a href="#contact" class="cta">Request a Service</a>
+    </div>
+  </header>
+
+  <section class="about">
+    <div class="container">
+      <h2>About Us</h2>
+      <p>
+        True Care Solution LLC is a registered company dedicated to connecting skilled technicians with the right projects across the United States.
+        We specialize in sourcing experienced professionals who are experts in their trades and committed to delivering high-quality results—on time and with care.
+      </p>
+      <p>
+        We proudly serve both residential and commercial clients. Whether it's a small repair or a large-scale project, our trusted technicians bring the skills and professionalism needed to get the job done right—the first time.
+      </p>
+      <address>
+        <strong>True Care Solutions LLC</strong><br>
+        30 N Gould St Ste N, Sheridan, WY 82801<br>
+        Email: <a href="mailto:service@truecaresolutions.in">service@truecaresolutions.in</a><br>
+        Website: <a href="https://truecaresolutions.in" target="_blank">truecaresolutions.in</a>
+      </address>
+    </div>
+  </section>
+
+  <section class="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="service-list">
+        <div class="service-card">
+          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=500&q=80" alt="Lighting">
+          <h3>Interior & Exterior Lighting</h3>
+          <p>Repair and replacement of lighting fixtures for homes and businesses.</p>
         </div>
-        <div class="feature">
-            <h3>Flexible Scheduling</h3>
-            <p>Book appointments at your convenience, Monday to Friday.</p>
+        <div class="service-card">
+          <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=500&q=80" alt="Handyman">
+          <h3>General Handyman Services</h3>
+          <p>Expert help with everyday repairs, installations, and maintenance tasks.</p>
         </div>
-        <div class="feature">
-            <h3>Satisfaction Guaranteed</h3>
-            <p>We stand by our work and strive for 100% customer satisfaction.</p>
+        <div class="service-card">
+          <img src="https://images.unsplash.com/photo-1509228468518-c5eeecbff44a?auto=format&fit=crop&w=500&q=80" alt="Plumbing/Electrical">
+          <h3>Plumbing & Electrical Work</h3>
+          <p>Qualified technicians for all your plumbing and electrical needs.</p>
         </div>
-    </section>
-    <footer>
-        <p>&copy; 2025 9to5 Home Services. All rights reserved.</p>
-    </footer>
+        <div class="service-card">
+          <img src="https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?auto=format&fit=crop&w=500&q=80" alt="Glass Replacement">
+          <h3>Glass Replacement</h3>
+          <p>Quick and professional glass repair and replacement services.</p>
+        </div>
+        <div class="service-card">
+          <img src="https://images.unsplash.com/photo-1455103493930-a116f655b6c5?auto=format&fit=crop&w=500&q=80" alt="Wall Repair/Painting">
+          <h3>Wall Repair & Painting</h3>
+          <p>Restoration and beautification of interior and exterior walls.</p>
+        </div>
+        <div class="service-card">
+          <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=500&q=80" alt="Door Repair">
+          <h3>Door Repair & More</h3>
+          <p>Repair and maintenance for all types of doors and additional home services.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact" id="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>Email us at <a href="mailto:service@truecaresolutions.in">service@truecaresolutions.in</a> or use the form below:</p>
+      <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="How can we help?" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      &copy; 2025 True Care Solutions LLC – All Rights Reserved.
+    </div>
+  </footer>
 </body>
 </html>
