--- a/index.html
+++ b/index.html
@@ -1,83 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>True Care Solutions LLC</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <title>True Care Solutions - Home Services Made Easy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Inter:400,600,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-  <header class="hero">
-    <div class="container">
-      <h1>True Care Solutions LLC</h1>
-      <p class="tagline">Connecting skilled technicians with the right projects across the United States</p>
-      <a href="#contact" class="cta">Request a Service</a>
+  <header>
+    <div class="container nav-bar">
+      <a class="logo" href="index.html">True Care Solutions</a>
+      <nav>
+        <a href="services.html">Services</a>
+        <a href="about.html">About</a>
+        <a href="how-it-works.html">How It Works</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+      <a href="contact.html" class="cta">Get Started</a>
     </div>
   </header>
 
-  <section class="services container">
-    <h2>Our Services</h2>
-    <div class="service-cards">
-      <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Lighting" />
-        <h3>Lighting Repair & Replacement</h3>
-        <p>Interior and exterior lighting repair and replacement.</p>
-      </div>
-      <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=400&q=80" alt="Handyman" />
-        <h3>Handyman Services</h3>
-        <p>General handyman services for all your needs.</p>
-      </div>
-      <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1509228468518-c5eeecbff44a?auto=format&fit=crop&w=400&q=80" alt="Plumbing" />
-        <h3>Plumbing & Electrical</h3>
-        <p>Professional plumbing and electrical work.</p>
-      </div>
-      <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?auto=format&fit=crop&w=400&q=80" alt="Glass Replacement" />
-        <h3>Glass Replacement</h3>
-        <p>Glass replacement for doors and windows.</p>
-      </div>
-      <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1455103493930-a116f655b6c5?auto=format&fit=crop&w=400&q=80" alt="Wall Repair" />
-        <h3>Wall Repair & Painting</h3>
-        <p>Wall repair and professional painting services.</p>
-      </div>
-      <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Door Repair" />
-        <h3>Door Repair & More</h3>
-        <p>Repair and maintenance for all types of doors and more.</p>
+  <section class="hero">
+    <div class="container">
+      <h1>Home Services Made Easy</h1>
+      <p>Connect with trusted professionals for repairs, maintenance, and more.</p>
+      <form class="search-form">
+        <input type="text" placeholder="What service do you need?">
+        <input type="text" placeholder="Zip code">
+        <button type="submit">Find Pros</button>
+      </form>
+      <div class="trust-signals">
+        <img src="images/trustpilot.png" alt="Trustpilot" height="28">
+        <span>4.8/5 average rating</span>
       </div>
     </div>
   </section>
 
-  <section class="about container">
-    <h2>About Us</h2>
-    <p>
-      True Care Solution USA is a registered company dedicated to connecting skilled technicians with the right projects across the United States. We specialize in sourcing experienced professionals who are experts in their trades and committed to delivering high-quality results—on time and with care.
-    </p>
-    <p>
-      We proudly serve both residential and commercial clients. Whether it's a small repair or a large-scale project, our trusted technicians bring the skills and professionalism needed to get the job done right—the first time.
-    </p>
-    <address>
-      30 N Gould St Ste N, Sheridan, WY 82801<br />
-      <a href="mailto:service@truecaresolutions.in">service@truecaresolutions.in</a><br />
-      <a href="https://truecaresolutions.in">truecaresolutions.in</a>
-    </address>
+  <section class="services-preview">
+    <div class="container">
+      <h2>Popular Services</h2>
+      <div class="service-list">
+        <div class="service-card">
+          <i class="fa-solid fa-lightbulb"></i>
+          <h3>Lighting & Electrical</h3>
+        </div>
+        <div class="service-card">
+          <i class="fa-solid fa-screwdriver-wrench"></i>
+          <h3>Handyman Services</h3>
+        </div>
+        <div class="service-card">
+          <i class="fa-solid fa-faucet-drip"></i>
+          <h3>Plumbing</h3>
+        </div>
+        <div class="service-card">
+          <i class="fa-solid fa-window-restore"></i>
+          <h3>Glass Replacement</h3>
+        </div>
+        <div class="service-card">
+          <i class="fa-solid fa-paint-roller"></i>
+          <h3>Wall Repair & Painting</h3>
+        </div>
+        <div class="service-card">
+          <i class="fa-solid fa-door-closed"></i>
+          <h3>Door Repair & More</h3>
+        </div>
+      </div>
+      <a href="services.html" class="view-all">View All Services</a>
+    </div>
   </section>
 
-  <section class="contact container" id="contact">
-    <h2>Contact Us</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="How can we help?" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+  <section class="how-it-works-preview">
+    <div class="container">
+      <h2>How It Works</h2>
+      <div class="steps">
+        <div class="step">
+          <span class="step-number">1</span>
+          <p>Tell us about your project</p>
+        </div>
+        <div class="step">
+          <span class="step-number">2</span>
+          <p>Get matched with trusted pros</p>
+        </div>
+        <div class="step">
+          <span class="step-number">3</span>
+          <p>Book and relax!</p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <footer>
-    &copy; 2025 True Care Solutions LLC – All Rights Reserved.
+    <div class="container">
+      &copy; 2025 True Care Solutions LLC – All Rights Reserved.
+    </div>
   </footer>
 </body>
 </html>
